--- a/wingateCSharp/App.config
+++ b/wingateCSharp/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup> 
+      <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+   
+  <connectionStrings>
+      <add name="db" connectionString="Server=DESKTOP-OH6TTHF\\SQLEXPRESS; Database=TWO;Trusted_Connection=True;User Id = DESKTOP-OH6TTHF\\CodePros"/>
+    </connectionStrings>
 </configuration>
