--- a/wingateCSharp/NLog.config
+++ b/wingateCSharp/NLog.config
@@ -36,6 +36,26 @@
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     -->
+      <target name="all" xsi:type="File"
+      layout="${longdate} ${logger} ${message}"
+      fileName="${basedir}/logs/logs.txt"
+      archiveFileName="${basedir}/archives/log.{#####}.txt"
+      archiveAboveSize="204800"
+      archiveNumbering="Sequence"
+      concurrentWrites="true"
+      keepFileOpen="false"
+      encoding="iso-8859-2" />
+
+      <target name="info" xsi:type="File"
+      layout="${longdate} ${logger} ${message}"
+      fileName="${basedir}/logs/logs-Info.txt"
+      archiveFileName="${basedir}/archives/log.{#####}.txt"
+      archiveAboveSize="204800"
+      archiveNumbering="Sequence"
+      concurrentWrites="true"
+      keepFileOpen="false"
+      encoding="iso-8859-2" />
+
   </targets>
 
   <rules>
@@ -45,5 +65,9 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
+    
+    <logger name="*" maxlevel="Info" writeTo="info"/>
+    <logger name="*" minlevel="Warn" writeTo="all"/>
+    
   </rules>
 </nlog>
