--- a/wingateCSharp/wingateCSharp.csproj
+++ b/wingateCSharp/wingateCSharp.csproj
@@ -32,13 +32,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Dynamics.GP.eConnect, Version=14.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\Econnect 12.0\Econnect 12.0\Microsoft.Dynamics.GP.eConnect.dll</HintPath>
+    <Reference Include="Microsoft.Dynamics.GP.eConnect">
+      <HintPath>..\..\..\Temp\Econnect 12.0\Microsoft.Dynamics.GP.eConnect.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Dynamics.GP.eConnect.Serialization, Version=14.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=AMD64">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\Downloads\Econnect 12.0\Econnect 12.0\Microsoft.Dynamics.GP.eConnect.Serialization.dll</HintPath>
+    <Reference Include="Microsoft.Dynamics.GP.eConnect.Serialization">
+      <HintPath>..\..\..\Temp\Econnect 12.0\Microsoft.Dynamics.GP.eConnect.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
       <HintPath>..\packages\NLog.4.4.1\lib\net45\NLog.dll</HintPath>
@@ -54,16 +52,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EConnct\EConnect.cs" />
     <Compile Include="EConnct\EConnectConstants\EConnectConstants.cs" />
     <Compile Include="EConnct\EConnectHelper.cs" />
+    <Compile Include="EConnct\IEConnect\ItaPMTransaction.cs" />
+    <Compile Include="EConnct\TaPmTransaction.cs" />
     <Compile Include="FileOperation\FileReader.cs" />
+    <Compile Include="FileReader.cs" />
     <Compile Include="Interfaces\IFileReader.cs" />
     <Compile Include="Interfaces\IValidator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatmentHelper.cs" />
+    <Compile Include="validations.cs" />
     <Compile Include="Validation\NotNullValidation.cs" />
+    <Compile Include="WingateImporter.cs" />
     <Compile Include="wingateSchema.cs" />
   </ItemGroup>
   <ItemGroup>
